[package]
name = "ffi_reflect"
version = "1.0.2"
authors = ["Danil Gulin <d.nk.gulin@gmail.com>"]
edition = "2021"
description = "Provides a derive macro that genreates a reflection method for C-comaptible types"
repository = "https://github.com/dngulin/ffi_reflect"
license = "MIT"
readme = "README.md"
keywords = ["ffi"]
categories = ["development-tools::ffi"]

[dependencies]
ffi_reflect_derive = "1.0.1"