[package]
name = "ffi_reflect_derive"
version = "0.1.0"
authors = ["Danil Gulin <dngulin@yandex.ru>"]
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.86"
quote = "1.0.15"
proc-macro2 = "1.0.36"