[package]
name = "ffi_reflect_derive"
version = "1.0.0"
authors = ["Danil Gulin <d.nk.gulin@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A derive proc macro implemenation for the `ffi_reflect`. Do not use directly!"
repository = "https://github.com/dngulin/ffi_reflect"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.15"
quote = "1.0.26"
proc-macro2 = "1.0.56"